--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
