--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.5",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "tailwindcss": "2.0.4"
