--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "next": "10.0.9",
+    "next": "^10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
