--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
     "autoprefixer": "10.2.5",
     "postcss": "8.2.8"
   }
