--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "."
-  },
-  "paths": {
-    "@*": ["/*"],
-    "@components": ["components"],
-    "@data/*": ["data/*"],
-    "@hooks/*": ["hooks/*"],
-    "@theme": ["theme"],
-    "@utils/*": ["utils/*"]
+    "baseUrl": ".",
+    "paths": {
+      "@*": ["/*"],
+      "@components": ["components"],
+      "@data/*": ["data/*"],
+      "@hooks/*": ["hooks/*"],
+      "@theme": ["theme"],
+      "@utils/*": ["utils/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
