--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
+    "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
