--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "styled-components": "^5.2.1",
     "tailwindcss": "2.0.4"
   },
