--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "floating-label-react": "^1.0.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "^10.1.3",
