--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "2.9.1",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
+    "babel-preset-next": "^1.4.0",
     "chart.js": "2.9.4",
     "floating-label-react": "^1.0.3",
     "gulp": "4.0.2",
