--- a/backend/payments/package.json
+++ b/backend/payments/package.json
@@ -1,11 +1,18 @@
 {
   "name": "sample-http",
   "version": "0.0.1",
+  "watch": {
+    "start": "*.js"
+  },
   "scripts": {
-    "start": "npx functions-framework --target=payments --signature-type=http"
+    "watch": "npm-watch start",
+    "start": "npx functions-framework --target=payments --signature-type=http",
+    "deploy": "gcloud functions deploy payments --region=australia-southeast1 --trigger-http",
+    "deploy-env": "gcloud functions deploy payments --env-vars-file .env.yaml --region=australia-southeast1 --trigger-http"
   },
   "devDependencies": {
-    "@google-cloud/functions-framework": "^1.7.1"
+    "@google-cloud/functions-framework": "^1.7.1",
+    "npm-watch": "^0.9.0"
   },
   "dependencies": {
     "stripe": "^8.145.0"
