--- a/backend/payments/package.json
+++ b/backend/payments/package.json
@@ -15,7 +15,9 @@
     "npm-watch": "^0.9.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.4",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "stripe": "^8.145.0"
   }
 }
