--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7aprons-next",
+  "name": "seven-aprons",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -47,7 +47,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
+    "@types/react": "^17.0.4",
     "autoprefixer": "10.2.5",
     "postcss": "8.2.8"
   }
