fix: checkout api

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@google-cloud/storage": "^5.8.5",
     "@popperjs/core": "2.9.1",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
     "babel-preset-next": "^1.4.0",
     "chart.js": "2.9.4",
+    "date-fns": "^2.21.2",
     "floating-label-react": "^1.0.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
@@ -25,6 +27,7 @@
     "react-hook-form": "^6.15.6",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "stripe": "^8.146.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "2.0.4"
   },
