--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.6",
+    "react-query": "^3.16.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
     "stripe": "^8.146.0",
