--- a/.github/workflows/cloud-run-deploy.yml
+++ b/.github/workflows/cloud-run-deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   CLOUD_RUN_PROJECT_ID: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
-  CLOUD_RUN_REGION: australia-southeast1
+  CLOUD_RUN_REGION: asia-northeast1
   REPO_NAME: seven-aprons
 
 jobs:
