--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@google-cloud/pubsub": "^2.12.0",
+    "@google-cloud/secret-manager": "^3.6.0",
     "@google-cloud/storage": "^5.8.5",
     "@popperjs/core": "2.9.1",
     "@stripe/stripe-js": "^1.13.2",
