--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "2.9.1",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
+    "@types/react-query": "^1.1.2",
     "babel-preset-next": "^1.4.0",
     "chart.js": "2.9.4",
     "date-fns": "^2.21.2",
