--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "floating-label-react": "^1.0.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "micro": "^9.3.4",
     "next": "^10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
