--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.21.3",
     "floating-label-react": "^1.0.3",
+    "google-spreadsheet": "^3.1.15",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "micro": "^9.3.4",
