--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -41,6 +41,7 @@ jobs:
           gcloud beta run deploy $REPO_NAME --image gcr.io/$CLOUD_RUN_PROJECT_ID/$REPO_NAME:$GITHUB_SHA \
             --project $CLOUD_RUN_PROJECT_ID \
             --platform managed \
+            --service-account ${{ secrets.CLOUD_SA_EMAIL }} \
             --region $CLOUD_RUN_REGION \
             --allow-unauthenticated \
             --quiet
