--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
       "request": "attach",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "port": 9229
+      "port": 9229,
+      "sourceMaps": true
     }
   ]
 }
