--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,21 @@
     {
       "type": "node",
       "request": "attach",
-      "name": "Launch Program",
+      "name": "Next: Node",
       "skipFiles": ["<node_internals>/**"],
-      "port": 9229,
-      "sourceMaps": true
+      "cwd": "${workspaceFolder}",
+      "port": 9229
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Next: Chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}",
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "webpack://_N_E/*": "${webRoot}/*"
+      }
     }
   ]
 }
