--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
   "devDependencies": {
     "@types/react": "^17.0.4",
     "autoprefixer": "10.2.5",
-    "postcss": "8.2.8"
+    "postcss": "^8.3.11"
   }
 }
