--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "staging": "next dev -p $PORT",
     "build": "next build",
     "start": "next start -p $PORT",
+    "tsc": "tsc --pretty --noEmit",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
     "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
   },
