--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "next": "^10.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "^6.15.8",
+    "react-hook-form": "^7.30.0",
     "react-query": "^3.16.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "react-toastify": "^8.2.0",
     "stripe": "^8.146.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "2.0.4"
