--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@google-cloud/secret-manager": "^3.6.0",
     "@google-cloud/storage": "^5.8.5",
     "@popperjs/core": "2.9.1",
+    "@sendgrid/mail": "^7.6.2",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/forms": "0.2.1",
     "@types/react-query": "^1.1.2",
